<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demouser.scarnesdice.MainActivity">

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourScore"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yourScoreVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourScoreVal"
        app:layout_constraintLeft_toRightOf="@+id/yourScore"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/computerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computerScore"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yourScore" />

    <TextView
        android:id="@+id/computerScoreVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computerScoreVal"
        app:layout_constraintLeft_toRightOf="@+id/computerScore"
        app:layout_constraintTop_toBottomOf="@id/yourScoreVal" />

    <ImageView
        android:id="@+id/diceImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/dice1"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="191dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/rollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rollButton"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="377dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/diceImage"
        app:layout_constraintRight_toLeftOf="@id/holdButton"/>

    <Button
        android:id="@+id/holdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holdButton"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="377dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/diceImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/resettButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetButton"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="377dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/diceImage"
        app:layout_constraintLeft_toRightOf="@id/holdButton"/>

    <TextView
        android:id="@+id/turnScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/turnScore"
        app:layout_constraintBottom_toTopOf="@+id/diceImage"
        app:layout_constraintLeft_toLeftOf="@id/diceImage" />

    <TextView
        android:id="@+id/turnScoreVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/turnScoreVal"
        app:layout_constraintBottom_toTopOf="@+id/diceImage"
        app:layout_constraintLeft_toRightOf="@id/turnScore" />
</android.support.constraint.ConstraintLayout>
